feat:reviewAdim/mainBanner

--- a/src/main/resources/templates/views/index/index.html
+++ b/src/main/resources/templates/views/index/index.html
@@ -11,11 +11,11 @@
 		<div class="slider-container">
 
 			<div class="slider" aria-live="polite">
-				<div class="slide" aria-hidden="true" data-src="img/banner1.jpg"></div>
-				<div class="slide" aria-hidden="true" data-src="img/banner2.jpg"></div>
-				<div class="slide" aria-hidden="true" data-src="img/banner3.jpg"></div>
-				<div class="slide" aria-hidden="true" data-src="img/banner4.jpg"></div>
-				<div class="slide" aria-hidden="true" data-src="img/banner5.jpg"></div>
+				<div class="slide" aria-hidden="true" data-src="img/mainbanner1.jpg"></div>
+				<div class="slide" aria-hidden="true" data-src="img/mainbanner6.jpg"></div>
+				<div class="slide" aria-hidden="true" data-src="img/mainbanner3.jpg"></div>
+				<div class="slide" aria-hidden="true" data-src="img/mainbanner4.jpg"></div>
+				<div class="slide" aria-hidden="true" data-src="img/mainbanner5.jpg"></div>
 			</div>
 			<button class="prev" aria-label="Previous slide">&lt;</button>
 			<button class="next" aria-label="Next slide">&gt;</button>
