--- a/src/main/resources/templates/views/admin/review.html
+++ b/src/main/resources/templates/views/admin/review.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="/css/admin/commons.css">
-	<link rel="stylesheet" href="/css/admin/sidebar.css">
-	<script src="/js/admin/sidebar.js"></script>
-	<script src="/js/admin/commons.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<link rel="stylesheet" href="/css/admin/commons.css">
+<link rel="stylesheet" href="/css/admin/sidebar.css">
+<script src="/js/admin/sidebar.js"></script>
+<script src="/js/admin/commons.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -18,17 +18,15 @@
 			<div class="search-box">
 				<div class="search-section">
 					<div class="filter-section">
-						<label for="search">리뷰검색</label>
-						<select id="search">
+						<label for="search">리뷰검색</label> <select id="search">
 							<option>전체</option>
 							<option>고객 성명</option>
 							<option>책 이름</option>
-						</select>
-						<input type="text" id="searchInput">
+						</select> <input type="text" id="searchInput">
 					</div>
 					<div class="filter-section">
-						<label for="search" class="jump2">작성기간</label>
-						<input type="date" id="startDate"> ~ <input type="date" id="endDate">
+						<label for="search" class="jump2">작성기간</label> <input type="date"
+							id="startDate"> ~ <input type="date" id="endDate">
 					</div>
 					<div class="btns">
 						<button class="search-btn">검색</button>
@@ -49,62 +47,40 @@
 							<th>리뷰 상세 내용</th>
 							<th>상태</th>
 							<th>리뷰 관리</th>
+							<th>정보</th>
+							<th>상태</th>
 
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-							<td><input type="checkbox" class="select-item"></td>
-							<td>2</td>
-							<td>2024-08-09</td>
-							<td>이유진<br>
-								yujin
-							</td>
-							<td>키 쑥쑥 크는 방법<br>
-								상품코드 : 00001<br>
-								판매가 : 12,000
-
-							</td>
-							<td><span class="stars">★★★★★</span> <br>
-								이 책을 보고 키가 10cm나 컸어요!
-
-							</td>
-							<td>배송 완료</td>
+						<tr th:each="review : ${reviews}">
+							<td><input type="checkbox" id="select-all"></td>
+							<td th:text="${review.reviewNum}"></td>
+							<td th:text="${#temporals.format(review.reviewDate, 'yyyy-MM-dd HH:mm')}"></td>
+							<td th:text="${review.username}"></td>
 							<td>
-								<select id="search">
-									<option>관리</option>
-									<option>비공개</option>
-									<option>삭제</option>
-								</select>
+								<span th:text="${review.bookname}"></span>
+								<span th:text="${review.author}"></span>
+								<span th:text="${review.isbn}"></span>
 							</td>
-
-						</tr>
-						<tr>
-							<td><input type="checkbox" class="select-item"></td>
-							<td>1</td>
-							<td>2024-08-09</td>
-							<td>김도영<br>
-								doyoung
-							</td>
-							<td>키 쑥쑥 크는 방법<br>
-								상품코드 : 00002<br>
-								판매가 : 12,000
-							</td>
-							<td><span class="stars">★☆☆☆☆</span> <br>
-								키가 자라지 않아요
-							</td>
-							<td>배송 완료</td>
+							<td th:text="${review.rate}"></td>
+							<td th:text="${review.reviewContent}"></td>
+							<td th:text="${review.recommend}"></td>
+							<td th:text="${review.complaint}"></td>
+							<td th:text="${review.actualOrder ? '구매자' : '비구매자'}"></td>
 							<td>
-								<select id="search">
-									<option>관리</option>
-									<option>비공개</option>
-									<option>삭제</option>
-								</select>
+								<form
+									th:action="@{/admin/review/delete/{reviewNum}(reviewNum=${review.reviewNum})}"
+									method="post">
+									<button type="submit">삭제</button>
+								</form>
+								<form
+									th:action="@{/admin/review/update/{reviewNum}(reviewNum=${review.reviewNum})}"
+									method="post">
+									<button type="submit">신고</button>
+								</form>
 							</td>
-							</td>
-
 						</tr>
-
 					</tbody>
 				</table>
 				<div id="pagination" class="pagination-container"></div>
