--- a/src/main/resources/templates/views/login/login.html
+++ b/src/main/resources/templates/views/login/login.html
@@ -57,15 +57,15 @@
                 <div class="easy-login-box">
                     <div class="kakao-login-ko">
                         <img src="/img/kakao.png" alt="Kakao Login">
-                        <a href="/oauth2/authorization/kakao" target="_blank" title="카카오 아이디로 로그인">카카오 아이디로 로그인</a>
+                        <a href="/oauth2/authorization/kakao"  title="카카오 아이디로 로그인">카카오 아이디로 로그인</a>
                     </div>
                     <div class="naver-login-ko">
                         <img src="/img/naver.png" alt="Naver Login">
-                        <a href="/oauth2/authorization/naver" target="_blank" title="네이버 아이디로 로그인">네이버 아이디로 로그인</a>
+                        <a href="/oauth2/authorization/naver"  title="네이버 아이디로 로그인">네이버 아이디로 로그인</a>
                     </div>
                     <div class="google-login-ko">
                         <img src="/img/google.png" alt="Google Login">
-                        <a href="/oauth2/authorization/google" target="_blank" title="구글 아이디로 로그인">구글 아이디로 로그인</a>
+                        <a href="/oauth2/authorization/google"  title="구글 아이디로 로그인">구글 아이디로 로그인</a>
                     </div>
                 </div>
             </div>
