--- a/src/main/resources/templates/views/login/signup.html
+++ b/src/main/resources/templates/views/login/signup.html
@@ -4,47 +4,21 @@
 <meta charset="UTF-8">
 <title>북북 회원가입</title>
 <link rel="stylesheet" href="/css/login/signup.css">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script
 	src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 <script src="/js/login/address.js"></script>
 <script src="/js/login/signup.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
+<script th:inline="javascript">
+		/*<![CDATA[*/
+		var errorMessage = /*[[${errorMessage}]]*/null;
+		if (errorMessage) {
+			alert(errorMessage);
+		}
+		/*]]>*/
+	</script>
 <body>
-	
-    <script>
-    function submitAndRedirect() {
-        var form = $('#signupForm');
-        var csrfToken = $("input[name='_csrf']").val();
-        var csrfHeader = $("input[name='_csrf']").attr('name');
-        
-        console.log("CSRF Token:", csrfToken);
-        console.log("CSRF Header:", csrfHeader);
-        
-        $.ajax({
-            url: '/signup/save-and-redirect',
-            type: 'POST',
-            data: form.serialize(),
-            beforeSend: function(xhr) {
-                xhr.setRequestHeader(csrfHeader, csrfToken);
-            },
-            success: function(response) {
-                console.log("Response:", response);
-                if (response === "success") {
-                    window.location.href = '/signup/admin';
-                } else {
-                    alert("오류가 발생했습니다.");
-                }
-            },
-            error: function(xhr, status, error) {
-                console.error("Error occurred:", error);
-                console.error("Status:", status);
-                console.error("Response:", xhr.responseText);
-                alert("오류가 발생했습니다.");
-            }
-        });
-    }
-    </script>
 	<div class="main-signup">
 		<header>
 			<a th:href="@{/}">
@@ -53,12 +27,13 @@
 				</div>
 			</a>
 		</header>
-
+		
 		<section class="signup-wrap">
 			<form id="signupForm" action="/signup" method="post">
-          <input type="hidden" th:name="${_csrf != null ? _csrf.parameterName : '_csrf'}" 
-                       th:value="${_csrf != null ? _csrf.token : ''}"/>
-                   	<div>
+				<input type="hidden"
+					th:name="${_csrf != null ? _csrf.parameterName : '_csrf'}"
+					th:value="${_csrf != null ? _csrf.token : ''}" />
+				<div>
 					<h3>이메일(ID)</h3>
 					<div class="signup-input">
 						<input id="signup-email" type="email" name="email"
@@ -72,7 +47,6 @@
 							title="비밀번호는 8~16자리 영문, 숫자, 특수문자를 포함해야 합니다.">
 					</div>
 
-					
 					<div class="phone">
 						<h3>이름</h3>
 						<div class="signup-input">
@@ -139,17 +113,18 @@
 
 						<div>
 							<div class="signup-btn-wrap">
-                        <button id="signup-btn" type="submit" onclick="validateForm(); return false;">가입하기</button>
-                    </div>
-                    <div class="publisher-signup-wrap">
-                        <button id="publisher-signup-btn" type="button" onclick="submitAndRedirect()">출판사 회원가입으로 전환</button>
-                    </div>
+								<button id="signup-btn" type="submit"
+									onclick="validateForm(); return false;">가입하기</button>
+							</div>
+							<div class="publisher-signup-wrap">
+								<button id="publisher-signup-btn" type="button"
+									onclick="submitAndRedirect()">출판사 회원가입으로 전환</button>
+							</div>
 						</div>
 					</div>
 				</div>
 			</form>
 		</section>
 	</div>
-
 </body>
 </html>
