--- a/src/main/resources/templates/views/commons/layout.html
+++ b/src/main/resources/templates/views/commons/layout.html
@@ -8,6 +8,8 @@
 	<script src="https://kit.fontawesome.com/bcc4a0fa81.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="/js/mainContent/menuButton.js"></script>
+	<meta name="_csrf" th:content="${_csrf.token}" />
+	<meta name="_csrf_header" th:content="${_csrf.headerName}" />
 	
 	
 	<!-- 챗봇  -->
