--- a/src/main/resources/static/css/cart/cart-list.css
+++ b/src/main/resources/static/css/cart/cart-list.css
@@ -46,6 +46,9 @@ h1 {
     background-color: #e0e0e0;
 }
 
+.all{
+	margin-bottom: 40px;
+}
 
 /* left-section */
 .left-section {
@@ -61,9 +64,7 @@ h1 {
     text-align: center;
 }
 
-/* tr > td:nth-child(2){
-	width: 500px;
-} */
+
 .book-info-text{
 	width: 500px;
 }
@@ -91,6 +92,40 @@ h1 {
 	font-size: 18px;
 	font-weight: 500;
 }
+
+.quantity-control {
+    display: flex;
+    align-items: center;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 70px;
+    height: 30px;
+    justify-content: space-between;
+}
+
+.quantity-input {
+    width: 20px;
+    text-align: center;
+    border: none;
+    font-size: 16px;
+    background-color: white;
+}
+
+.quantity-btn {
+    background-color: white;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    padding: 5px;
+    width: 30px;
+    text-align: center;
+}
+
+.quantity-btn:focus {
+    outline: none;
+}
+
 
 .buy-buttons{
     display: flex;
