--- a/src/main/resources/static/css/common/header.css
+++ b/src/main/resources/static/css/common/header.css
@@ -86,6 +86,7 @@ header, main {
 	padding: 5px;
 	background: none;
 	border: none;
+	margin-right: 5px;
 }
 
 .search-container i {
@@ -114,6 +115,93 @@ header, main {
 	font-size: 30px;
 	margin-left: 10px;
 }
+
+
+
+/* 이미지 검색 */
+/* 모달 배경 */
+.modal-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000; /* 가장 위에 표시되도록 설정 */
+}
+
+/* 모달 콘텐츠 */
+/* .modal-content {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 300px; 모달의 너비를 설정
+    position: relative;
+}
+#cameraButton {
+    font-size: 24px;
+    cursor: pointer;
+    border: none;
+    background: none;
+}
+
+#fileUploadContainer {
+    display: none;
+    position: relative;
+    margin-top: 10px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: fit-content;
+    background-color: #f9f9f9;
+}
+
+#fileUploadContainer {
+    display: none;
+    position: fixed;
+    top: 20%; 화면의 세로 중앙에 위치
+    left: 30%; 화면의 가로 중앙에 위치
+    transform: translate(-50%, -50%); 요소의 중심이 정확히 중앙에 위치하도록 조정
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    z-index: 1000; 다른 요소 위에 표시되도록 설정
+    width: fit-content; 내용에 맞게 너비 조정
+}
+#imageFile {
+    display: block;
+    margin-bottom: 10px;
+}
+#imagePreview {
+    display: none;
+    margin-top: 10px;
+    max-width: 300px;
+    max-height: 150px;
+}
+#confirmButton {
+    display: none;
+    margin-right: 10px;
+}
+#closeButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 18px;
+    cursor: pointer;
+    background: none;
+    border: none;
+    color: #333;
+}
+#closeButton:hover {
+    color: #f44336;
+} */
+
+
 
 /*헤더 - 하  */
 .header-bottom {
@@ -242,4 +330,76 @@ header, main {
 	font-weight: 500;
 	cursor: pointer;
 	padding: 0;
+}
+
+
+
+/* 모달창 */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+}
+.modal-register {
+	width: 400px;
+	background-color: white;
+	border-radius: 8px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	padding: 25px;
+	position: relative;
+	margin: 10% auto;
+}
+.grey-button {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: block;
+}
+
+.close {
+    color: var(--dark-grey);
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    position: relative;
+    bottom: 8px;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+.modal-register button {
+	width: 100%;
+	padding: 12px;
+	background-color: var(--main-orange);
+	border: none;
+	border-radius: 4px;
+	color: white;
+	font-size: 16px;
+	cursor: pointer;
+	font-weight: bold;
+}
+
+#imageFile {
+    display: block;
+    margin-bottom: 10px;
+}
+#imagePreview {
+    display: none;
+    margin-top: 10px;
+    width: 300px;
+}
+#confirmButton {
+    display: none;
+    margin-right: 10px;
 }
