--- a/src/main/resources/static/css/mypage/favorite.css
+++ b/src/main/resources/static/css/mypage/favorite.css
@@ -45,15 +45,17 @@
 
 
 /* 찜 목록 */
-.wish-list{
-	border: 1px solid var(--grey);
-	border-radius: 5px;
-	margin: 10px 0;
-	width: 99%;
+.wish-list {
+    border: 1px solid var(--grey);
+    border-radius: 5px;
+    margin: 10px 0;
+    width: 99%;
 }
-.wish-text{
-	padding: 35px;
+
+.wish-text {
+    padding: 35px;
 }
+
 .book-grid {
     display: grid;
     grid-template-columns: repeat(4, minmax(200px, 1fr));
@@ -68,23 +70,77 @@
     text-align: center;
 }
 
-.book-item img {
+.img-container {
+    perspective: 1000px;
     width: 120px;
     height: 150px;
-    background-color: #d9d9d9;
-    border-radius: 4px;
+    margin: 0 auto;
     margin-bottom: 10px;
+    position: relative; /* 부모 요소로 position을 설정 */
+}
+
+.flip-box {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    position: relative; /* position relative 설정 */
+}
+
+.flip-box:hover {
+    transform: rotateY(180deg);
+}
+
+.front, .back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border-radius: 4px;
+}
+
+.front {
+    background-color: #d9d9d9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.front img {
+    width: 100%; /* 이미지가 컨테이너 크기에 맞게 조정되도록 설정 */
+    height: 100%;
+    object-fit: cover; /* 이미지 비율을 유지하며 잘림 방지 */
+    border-radius: 4px;
+}
+
+.back {
+    background-color: var(--very-light-grey);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotateY(180deg);
+    border-radius: 4px;
+}
+
+.back > button {
+	border: none;
+	background-color: var(--very-light-grey);
+}
+
+.back > button > i {
+	font-size: 25px;
 }
 
 .book-item h3 {
     font-size: 1rem;
     margin: 0 0 10px;
     color: #333;
-    display: -webkit-box;           /* 부모 요소로 지정 */
-    -webkit-box-orient: vertical;   /* 텍스트의 방향을 수직으로 지정 */
-    -webkit-line-clamp: 2;          /* 최대 줄 수를 2줄로 제한 */
-    overflow: hidden;               /* 넘치는 내용 숨김 */
-    text-overflow: ellipsis;        /* 말줄임표(...)를 추가 */
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .book-item p {
@@ -92,3 +148,4 @@
     color: #777;
     margin: 0;
 }
+
