--- a/src/main/resources/templates/views/cart/cart-list.html
+++ b/src/main/resources/templates/views/cart/cart-list.html
@@ -26,7 +26,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
                 <div class="label">주문완료</div>
             </div>
         </div>
-        <div class="flex j-center">
+        <div class="flex j-center all">
 	        <table class="left-section">
 	            <thead>
 	                <tr>
@@ -50,11 +50,18 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 	                            <p th:text="${cartDetail.author}">J.K 롤링 저 / 강동혁 역</p>
 	                        </div>
 	                    </td>
-	                    <td th:text="|${cartDetail.cartCnt}개|">1개</td>
-	                    <td th:text="|${#numbers.formatDecimal(itemAmount, 0, 'COMMA', 0, 'NONE')}원|">17,000원</td>
+	                    <td >
+	                    	<span th:text="|${cartDetail.cartCnt}개|">1개</span>
+	                    	<!-- <div class="quantity-control">
+							    <button type="button" class="quantity-btn decrement">-</button>
+							    <input type="text" class="quantity-input" value="1" min="1" readonly>
+							    <button type="button" class="quantity-btn increment">+</button>
+							</div> -->
+	                    </td>
+	                    <td class="price" th:text="|${#numbers.formatDecimal(itemAmount, 0, 'COMMA', 0, 'NONE')}원|">17,000원</td>
 	                    <td>
 	                        <form class="buy-buttons">
-	                            <button class="btn" onclick="window.location.href='/payment';">바로 구매</button>
+	                            <!-- <button class="btn" onclick="window.location.href='/payment';">바로 구매</button> -->
 	                            <button class="btn">수량 변경</button>
 	                            <button class="btn delete" th:onclick="|deleteCartItem(${cartDetail.cartDetailNum});|">삭제</button>
 	                        </form>
