--- a/src/main/resources/templates/views/mypage/favorite.html
+++ b/src/main/resources/templates/views/mypage/favorite.html
@@ -5,7 +5,11 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
     <link rel="stylesheet" href="/css/mypage/sidebar.css">
     <link rel="stylesheet" href="/css/mypage/favorite.css">
     <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
-    
+    <script>
+		function btnDeleteClicked(){
+			return confirm("정말로 삭제하시겠습니까?");
+		}
+	</script>
 </head>
 <main>
     <div class="flex">
@@ -34,17 +38,27 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
                 </section>
                 
                 <section class="wish-list">
-                	<div class="wish-text">
-                		<span class="chart-name">찜 목록</span>
-                	</div>
-                	<div class="book-grid">
+				    <div class="wish-text">
+				        <span class="chart-name">찜 목록</span>
+				    </div>
+				    <div class="book-grid">
 				        <div class="book-item" th:each="favorite : ${favorites}">
-				            <img th:src="${favorite.bookImg}">
-				            <h3 th:text="${favorite.bookName}">너무나 많은 여름이</h3>
-				            <p th:text="${favorite.author}">김안수 (지은이)</p>
+				            <div class="img-container">
+				                <div class="flip-box">
+				                    <img class="front" th:src="${favorite.bookImg}">
+				                    <form class="back" th:action="|/mypage/favorites/${favorite.bookNum}|" onsubmit="return btnDeleteClicked()" method="post">
+				                    	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+										<input type="hidden" name="_method" value="delete">
+				                    	<button><i class="fa-regular fa-trash-can"></i></button>
+				                    </form>
+				                </div>
+				            </div>
+				            <h3 th:text="${favorite.bookName}">책 제목</h3>
+				            <p th:text="${favorite.author}">저자</p>
 				        </div>
 				    </div>
-                </section>
+				</section>
+				
             </div>
         </div>
     </div>
