--- a/src/main/resources/static/css/admin/write.css
+++ b/src/main/resources/static/css/admin/write.css
@@ -146,3 +146,11 @@ button {
 	padding: 10px 20px;
 	border-radius: 3px;
 }
+#previewImg {
+    display: none; /* 기본적으로 숨김 */
+    max-width: 100%; /* 너비를 부모 컨테이너에 맞게 조정 */
+    height: auto; /* 자동 높이 조정 */
+    border: 1px solid #ddd; /* 이미지 테두리 */
+    border-radius: 4px; /* 둥근 모서리 */
+    margin-top: 10px; /* 상단 여백 */
+}
