--- a/src/main/resources/templates/views/seller/inventory-write.html
+++ b/src/main/resources/templates/views/seller/inventory-write.html
@@ -2,46 +2,52 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="/css/admin/write.css">
-	<link rel="stylesheet" href="/css/admin/sidebar.css">
-	<script src="/js/admin/sidebar.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/admin/write.css">
+    <link rel="stylesheet" href="/css/admin/sidebar.css">
+    <script src="/js/admin/sidebar.js"></script>
+    <script src="/js/seller/write.js" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="_csrf" th:content="${_csrf.token}" />
+	<meta name="_csrf_header" th:content="${_csrf.headerName}" />
 </head>
 
 <body>
-	<div style="display: flex;">
-		<th:block th:insert="~{views/seller/sidebar}" />
-		<div class="container">
-			<h1>상품 등록</h1>
-			<div id="product-form">
-				<form action="/seller/inventory/request" method="post">
-				<input type="hidden" th:name="${_csrf != null ? _csrf.parameterName : 'csrf'}"
-		                           th:value="${_csrf != null ? _csrf.token : ''}"/>
-					<table>
-						<thead>
-							<tr>
-								<th colspan="4">기본 정보</th>
-							</tr>
-						</thead>
-						<tbody>
+    <div style="display: flex;">
+        <th:block th:insert="~{views/seller/sidebar}" />
+        <div class="container">
+            <h1>상품 등록</h1>
+            <div id="product-form">
+                <form action="/seller/inventory/request" method="post">
+                    <!-- CSRF 토큰을 포함한 hidden input -->
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th colspan="4">기본 정보</th>
+                            </tr>
+                        </thead>
+                        <tbody>
 							<tr>
 								<th>도서명</th>
 								<td colspan="3">
 									<input type="text" id="bookName" name="bookName" placeholder="도서명을 입력해주세요">
-									<span class="char-count">[0/100]</span>
 								</td>
 							</tr>
 							<tr>
 								<th>상세 정보 url</th>
-								<td colspan="3">
-									<input type="text" id="infoURL" name="infoURL" placeholder="">
+								<td>
+									<input type="text" id="link" name="link" placeholder="">
 								</td>
+								<th>재고</th>
+							    <td>
+							        <input type="number" id="stock" name="stock" value="0"> <!-- 기본값 100 설정 -->
+							    </td>		
 							</tr>
 							<tr>
 								<th>판매가</th>
 								<td>
-									<input type="text" id="discount" name="discount" placeholder="0원">
+									<input type="text" id="discount" name="discount" value="0" placeholder="0원">
 								</td>
 								<th>글쓴이</th>
 								<td>
@@ -65,32 +71,31 @@
 								</td>
 							</tr>
 							<tr>
-								<th>메인 이미지</th>
-								<td colspan="3">
-									<div>
-										<label class="btn-file">
-											<input type="file" id="bookImg" onchange="fileupload(this)"
-												style="display: none;">
-											<input type="hidden" name="bucketKey" required>
-											<input type="hidden" name="orgName" required>
-											<span>+</span>
-										</label>
-										<p class="file-guide">
-											<span>권장 크기 : 1000 X 1000(윈도 대상 750 X 1000), 300 X 300 이상</span><br>
-											<span>이미지 확대 기능 : 대표 이미지 기준 1000 X 1000 이상 이미지 등록 시, 확대 기능이 제공됩니다.</span><br>
-										</p>
-									</div>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-					<div class="btn-write">
-						<button type="submit">상품 등록</button>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
+                                <th>메인 이미지</th>
+                                <td colspan="3">
+                                    <div>
+                                        <label class="btn-file">
+                                            <input type="file" id="bookImgInput"  onchange="fileUpload(this)"
+                                                style="display: none;">
+                                            <span>+</span>
+                                        </label>
+                                        <img id="previewImg" /> <!-- 미리보기 이미지를 표시할 <img> 태그 -->
+                                        <p class="file-guide">
+                                            <span>권장 크기 : 1000 X 1000(윈도 대상 750 X 1000), 300 X 300 이상</span><br>
+                                            <span>이미지 확대 기능 : 대표 이미지 기준 1000 X 1000 이상 이미지 등록 시, 확대 기능이 제공됩니다.</span><br>
+                                        </p>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="btn-write">
+                        <button type="submit">상품 등록</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
