--- a/src/main/resources/templates/views/seller/sidebar.html
+++ b/src/main/resources/templates/views/seller/sidebar.html
@@ -31,6 +31,6 @@
 			<li><a class="menu">클라우드</a></li>
 			
 		</ul>
-		<a href="#" class="logout"><img src="/img/logout.png"></a>
+		<a href="/logout" class="logout"><img src="/img/logout.png"></a>
 	</nav>
 </div>
