--- a/src/main/resources/templates/views/admin/sidebar.html
+++ b/src/main/resources/templates/views/admin/sidebar.html
@@ -61,7 +61,7 @@
 				</ul>
 			</li>
 		</ul>
-		<a href="#" class="logout"><img src="/img/logout.png"></a>
+		<a href="/logout" class="logout"><img src="/img/logout.png"></a>
 	</nav>
 	
 </div>
