--- a/src/main/resources/static/css/cart/payment.css
+++ b/src/main/resources/static/css/cart/payment.css
@@ -127,12 +127,34 @@ td > p{
 
 .coupon-item {
     display: block;
-    padding: 10px;
     margin: 5px 0;
-    background-color: #f9f9f9;
-    border-radius: 5px;
-    border: 1px solid #ddd;
     cursor: pointer;
+    
+    background-color: #fff;
+    border: 1px solid var(--grey);
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    text-align: left;
+    position: relative;
+}
+
+.description {
+    font-size: 14px;
+    color: #666;
+}
+
+.dates {
+    font-size: 12px;
+    color: #999;
+    margin-top: 10px;
+}
+
+.days-left {
+    font-weight: bold;
+    color: #ff5722;
+    margin-left: 10px;
+    margin-top: 1.5px;
 }
 
 .coupon-item input {
