--- a/src/main/resources/templates/views/commons/common.html
+++ b/src/main/resources/templates/views/commons/common.html
@@ -32,7 +32,7 @@
 				<form th:action="@{/search}" method="get" id="searchForm">
 					<select name="searchType" title="검색유형선택">
 						<option>통합검색</option>
-						<option>베스트셀러</option>
+						<option>도서</option>
 						<option>교보문고</option>
 						<option>이벤트</option>
 					</select> <input type="text" name="query" title="통합검색어 입력"
@@ -82,7 +82,7 @@
 	</div>
 	
 	<!-- 모달 창 (fileUploadContainer) -->
-	<div id="modal-register" class="modal">
+	<div id="camera-modal" class="modal">
 	    <div id="fileUploadContainer" class="modal-register">
 	        <span class="close">&times;</span>
 	        <input type="file" id="imageFile" name="imageFile" accept="image/*" required>
