--- a/src/main/resources/templates/views/mypage/coupon.html
+++ b/src/main/resources/templates/views/mypage/coupon.html
@@ -14,13 +14,13 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
             <div class="container-main">
 		        <div class="head">
 		            <h1>나의 쿠폰</h1>
-		            <button class="head-btn" id="headBtn">교환번호 등록</button>
+		            <button class="head-btn" id="RegisterBtn">교환번호 등록</button>
 		        </div>
 		        
-		        <div class="modal" id="modal-register">
-			        <form class="modal-register" action="/mypage/coupons" method="post">
+		        <div class="modal-background-register" id="modal-register">
+			        <form class="modal-register-ui" action="/mypage/coupons" method="post">
 			        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-				        <span class="close">&times;</span>
+				        <span class="close" id="coupon-register-close">&times;</span>
 				        <h2>교환번호 등록</h2>
 				        <input id="couponNum" type="text" name="couponNum" placeholder="번호를 입력해 주세요">
 				        <div class="info">
