--- a/src/main/resources/static/css/admin/sidebar.css
+++ b/src/main/resources/static/css/admin/sidebar.css
@@ -109,6 +109,10 @@ a {
   transition: all 0.3s ease;
   position: relative;
 }
+.star-rating {
+    color: gold;
+    font-size: 20px;
+}
 
 /* a::after {
   content: '';
