--- a/src/main/resources/templates/views/commons/common.html
+++ b/src/main/resources/templates/views/commons/common.html
@@ -76,7 +76,7 @@
 		</div>
 		<ul>
 			<li><a href="/bookList">베스트</a></li>
-			<li>신상품</li>
+			<li><a href="/newbookList">신상품</a></li>
 			<li><a href="/event">이벤트</a></li>
 		</ul>
 	</div>
