--- a/src/main/resources/templates/views/admin/inventory.html
+++ b/src/main/resources/templates/views/admin/inventory.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="/css/admin/sidebar.css">
 	<script src="/js/admin/commons.js"></script>
 	<script src="/js/admin/sidebar.js"></script>
+	<script src="/js/admin/inventory.js"></script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -29,6 +30,7 @@
 							<option>상품명</option>
 							<option>상품코드</option>
 							<option>출판사</option>
+							<option>저자</option>
 						</select>
 						<input type="text" placeholder="검색어 입력">
 					</div>
