--- a/src/main/resources/templates/views/seller/index.html
+++ b/src/main/resources/templates/views/seller/index.html
@@ -24,13 +24,62 @@
 					<div class="grid-item">
 						<div id="weekly-sales-chart" style="width:680px; height: 420px;"></div>
 					</div>
-					<div class="grid-item"></div>
-					<div class="grid-item"></div>
+					<div class="grid-item box">
+						<div>
+							<h3>최근 상품</h3>
+						</div>
+						<div class="inven-box">
+							<table class="order-table">
+								<thead>
+									<tr>
+										<th>제목</th>
+										<th>저자</th>
+										<th>출간일</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr th:each="dto, iterStat : ${list}" th:if="${iterStat.index < 5}">
+										<td th:text="${dto.bookName}"></td>
+										<td th:text="${dto.author}"></td>
+										<td th:text="${dto.pubdate}"></td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+					<div class="grid-item box">
+						<div>
+							<h3>리뷰 목록</h3>
+						</div>
+						<div class="inven-box">
+							<table class="order-table">
+								<thead>
+									<tr>
+										<th>작성자</th>
+										<th>제목</th>
+										<th>작성일</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>이유진</td>
+										<td>너무 좋아용</td>
+										<td>2024-08-10</td>
+									</tr>
+									<tr>
+										<td>이유진</td>
+										<td>너무 좋아용</td>
+										<td>2024-08-10</td>
+									</tr>
+
+								</tbody>
+							</table>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
 </body>
 <script>
 	// 임시 데이터
