feat: 챗봇 마무리

--- a/src/main/resources/templates/views/seller/inventory-write.html
+++ b/src/main/resources/templates/views/seller/inventory-write.html
@@ -30,8 +30,12 @@
                         <tbody>
 							<tr>
 								<th>도서명</th>
-								<td colspan="3">
+								<td>
 									<input type="text" id="bookName" name="bookName" placeholder="도서명을 입력해주세요">
+								</td>
+								<th>고유번호</th>
+								<td>
+									<input type="text" id="isbn" name="isbn" placeholder="">
 								</td>
 							</tr>
 							<tr>
